WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217389
[Cocoa] The WebContent development XPC service is not allowed to connect to the XPC endpoint in the Networking process
https://bugs.webkit.org/show_bug.cgi?id=217389
Summary
[Cocoa] The WebContent development XPC service is not allowed to connect to t...
Per Arne Vollan
Reported
2020-10-06 09:01:18 PDT
The WebContent development XPC service is not allowed to connect to the XPC endpoint in the Networking process, because this requires a private entitlement. The WebContent development XPC service is not allowed to have private entitlements. The WebContent process needs to connect to the XPC endpoint in the Networking process in order to receive the Launch Services database XPC object.
Attachments
Patch
(2.88 KB, patch)
2020-10-06 09:17 PDT
,
Per Arne Vollan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.03 KB, patch)
2020-10-06 10:09 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.89 KB, patch)
2020-10-06 11:36 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
Patch
(2.84 KB, patch)
2020-10-06 13:01 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.88 KB, patch)
2020-10-06 13:03 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-10-06 09:17:31 PDT
Created
attachment 410646
[details]
Patch
Per Arne Vollan
Comment 2
2020-10-06 10:09:08 PDT
Created
attachment 410652
[details]
Patch
Per Arne Vollan
Comment 3
2020-10-06 10:23:47 PDT
<
rdar://problem/68585497
>
Per Arne Vollan
Comment 4
2020-10-06 11:36:29 PDT
Created
attachment 410670
[details]
Patch
Brent Fulgham
Comment 5
2020-10-06 11:48:43 PDT
Comment on
attachment 410670
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410670&action=review
r=me
> Source/WebKit/Shared/Cocoa/XPCEndpoint.mm:33 > +#import <wtf/text/WTFString.h>
Should most of these things be inside PLATFORM(MAC), since they only seem to be used in that build case?
Per Arne Vollan
Comment 6
2020-10-06 12:34:56 PDT
(In reply to Brent Fulgham from
comment #5
)
> Comment on
attachment 410670
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=410670&action=review
> > r=me > > > Source/WebKit/Shared/Cocoa/XPCEndpoint.mm:33 > > +#import <wtf/text/WTFString.h> > > Should most of these things be inside PLATFORM(MAC), since they only seem to > be used in that build case?
Will fix. Thanks for reviewing!
Per Arne Vollan
Comment 7
2020-10-06 13:01:04 PDT
Created
attachment 410682
[details]
Patch
Per Arne Vollan
Comment 8
2020-10-06 13:03:34 PDT
Created
attachment 410684
[details]
Patch
Geoffrey Garen
Comment 9
2020-10-06 13:38:00 PDT
Seems like this behavior was always broken in WebContent.Development? If so, and we didn't notice, that's pretty serious. Can we add a regression test for this?
EWS
Comment 10
2020-10-06 13:53:40 PDT
Committed
r268072
: <
https://trac.webkit.org/changeset/268072
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410684
[details]
.
Per Arne Vollan
Comment 11
2020-10-06 13:58:51 PDT
(In reply to Geoffrey Garen from
comment #9
)
> Seems like this behavior was always broken in WebContent.Development? If so, > and we didn't notice, that's pretty serious. Can we add a regression test > for this?
Yes, this has been broken for WebContent.Development all along. I can look into creating a test for this. Thanks for reviewing!
Per Arne Vollan
Comment 12
2020-10-06 14:12:32 PDT
(In reply to Per Arne Vollan from
comment #11
)
> (In reply to Geoffrey Garen from
comment #9
) > > Seems like this behavior was always broken in WebContent.Development? If so, > > and we didn't notice, that's pretty serious. Can we add a regression test > > for this? > > Yes, this has been broken for WebContent.Development all along. I can look > into creating a test for this. > > Thanks for reviewing!
More specifically, it has not been an issue with WebContent in Debug mode, but when loading the system installed version of WebContent.Development.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug