[Cocoa] The WebContent development XPC service is not allowed to connect to the XPC endpoint in the Networking process https://bugs.webkit.org/show_bug.cgi?id=217389 <rdar://problem/68585497>

Reviewed by Brent Fulgham.

The WebContent development XPC service is not allowed to connect to the XPC endpoint in the Networking process,
because this requires a private entitlement. The WebContent development XPC service is not allowed to have private
entitlements. The WebContent process needs to connect to the XPC endpoint in the Networking process in order to
receive the Launch Services database XPC object. This patch addresses this issue by allowing platform binaries
to connect to the XPC endpoint.

* Shared/Cocoa/XPCEndpoint.mm:
(WebKit::XPCEndpoint::XPCEndpoint):


Canonical link: https://commits.webkit.org/230163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268072 268f45cc-cd09-0410-ab3c-d52691b4dbfc